# CE4303-pixel-counter

./: .gitignore  README.md
client/: run.sh
client/image/: encoded.txt
client/src/: main.c
server/: CMakeLists.txt  ImageServer.service  b64.txt  data_b64.txt  install.sh  server.config
server/img/tmp/: result.txt
server/logs/: logs.txt
server/src/: main.c
server/src/api/: server.c  server.h
server/src/api/controllers/: pxlcontroller.c  pxlcontroller.h
server/src/config/: config.c  config.h
server/src/images/: pixel_counter.py  pixels.c  pixels.h
server/src/logging/: logging.c  logging.h
server/src/utils/: base64.c  base64.h  convert2int.c  convert2int.h
